<?xml version="1.0"?>
<package>
  <name>kinova_teleop</name>
  <version>1.0.0</version>
  <description>The kinova_teleop package</description>
  <maintainer email="xwu4lab@gmail.com">xwu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kinova_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
